# phonon

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: CI.yml
builders/aws-codebuild/: build_and_test.sh  buildspec.yaml  install-conda.sh  install-deps.sh
builders/conda-recipe/: meta.yaml.template
builders/github-actions/: build_and_test.sh  conda_build_and_upload.sh
examples/: graphite.ipynb  graphite_IDF-08052019.ipynb  graphite_IDF.ipynb  graphite_IDF.py  graphite_use_phonopy.ipynb
phonon/: _version.py  atomic_scattering.py  dos.py  io.py  powderSQE.py  powderSQE2.py
phonon/cli/: __init__.py  phonon.py  phonopy.py
phonon/from_phonopy/: __init__.py  call_phonopy.py  idf.py
phonon/powderSQE/: IDF.py  __init__.py  _calc.py  use_phonopy.py
tests/: from_phonopy_TestCase.py  pytest.ini
tests/cli/phonopy/: Phonopy_TestCase.py
tests/data/graphite/: FORCE_SETS  POSCAR  SPOSCAR  exp_DOS.h5  (+2 more)
tests/phonon/: README-explore-powder-coh-SQE.md  atomicscattering_TestCase.py  explore-random-sampling-all-UC-axis-dependent-scaling-include-negative-Qs.ipynb  explore-random-sampling-all-UC-no-phase-correction.ipynb  explore-random-sampling-all-UC.ipynb  explore-random-sampling-big-Qspace-box.ipynb  explore-random-sampling-in-one-unitcell-less-samples.ipynb  explore-random-sampling-in-one-unitcell.ipynb  explore.ipynb  from_phonopy_TestCase.py  graphite-coh-SQE.ipynb  model-coherent-SQE.ipynb  phase-factor.ipynb  powderSQE-test.ipynb  powderSQE_IDF_TestCase.py  powderSQE_IDF_test.ipynb  powderSQE_TestCase.py  powderSQE_use_phonopy_TestCase.py
(+11 files in other folders)
